--- a/caso7/nbproject/private/private.properties
+++ b/caso7/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\jonac\\AppData\\Roaming\\NetBeans\\11.1\\build.properties
+user.properties.file=C:\\Users\\brymo\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
